		and remove from the front, which hopefully keeps threads on different
		cores better associated with their hot memory (probably doesn't).
	Added replaceAll(...) and removeAll(...) methods, as appropriate, to 
		DoubleGrid[2|3]D, IntGrid[2|3]D, Object[2|3]D, and DenseGrid[2|3]D.
	Added ChartUtilities, and added a few methods into the charts to assist it.
	Worked around bug in JFreeChart which prevents multiple series of the same name
		from displaying at the same time.
	Added BubbleChartGenerator and BubbleChartSeriesAttributes.
	Deleted SeriesAttributes.getRenderer() and changed SeriesAttributes.getPlot()
		to return a Plot, not an XYPlot
	Added BoxPlots
	Display2D has an option for precise drawing
	Console can save the positions of all the displays as user preferences.  Still
		a bit flickery though.
	PropertyField no longer attempts to set the underlying value of sliding properties
		when initialized.
        Various classes now load classes dynamically using Class.forName(..., , true, 
		Thread.currentThread.getContextClassLoader()) rather than just 
		Class.forName(...) as is normally done.  This solves an obscure and rare 
		bug where, if you place the mason.jar file in the Extension Classes 
		location on your computer (such as /Library/Java/Extension/ on a Mac) 
		rather than in the CLASSPATH, the ParameterDatabase cannot load
                classes normally found in the CLASSPATH because it has been
                assigned a different ClassLoader than they have.  Java's
                class loading model is bizarre and arcane.
	MASON handles missing JFreeCharts with aplomb now, rather than making blank
		menu names	
	Added a warning in Display2D.step() about a potential bug triggered in Linux
		Java 6 in an unusual circumstance.  We've decided NOT to add our
		workaround as it will likely slow down drawing: it's not a bug in
		our code but rather in Oracle's.  But we included explanation about
		how to work around it in the comments to that method.